--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div class="palette-color color-3"></div>
             <div class="palette-color color-4"></div>
             <div class="palette-color color-5"></div>
+            <div class="palette-color color-6"></div>
+            <div class="palette-color color-7"></div>
           </section>
           <section class="brush">
             <div class="current-brush color-2">
